[package]
name = "nexmark"
version = "0.1.0"
authors = ["Matthew Brookes <brookesm@student.ethz.ch>"]
edition = "2018"

[dependencies]
abomonation = "^0.7"
abomonation_derive = "0.3"
clap = "*"
env_logger = "*"
faster-rs = { git = "https://github.com/faster-rs/faster-rs.git", branch = "remove-serialisation-measure-locking" }
hdrhist = "0.5.0"
log = "*"
rand = "0.6"
metrics-runtime = "0.1.0"
serde = "*"
serde_derive = "*"
serde_json = "*"
streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
timely = { git = "https://github.com/matthewbrookes/timely-dataflow.git", branch = "measure-serialisation" }
